Fix bug where text in scrollable menu wraps

--- a/src/assets/styles/scrollable-menu.scss
+++ b/src/assets/styles/scrollable-menu.scss
@@ -17,6 +17,7 @@
   outline: 0;
   color: $white;
   transition: background-color 0.3s;
+  text-wrap: nowrap;
 }
 
 .scrollable-menu-button:hover {
